# givingtree

./: .gitignore  CMakeLists.txt  DEBIAN  LICENSE  Makefile.am  README  configure.ac
client/: account_messages.proto  app_messages_for_client.proto  giving_tree_client.py  giving_tree_client_messages.proto  giving_tree_server_messages.proto
client/tools/: funapi_server_stub.py
clients/cpp/: README.txt  giving_tree_client_protoc.sh
clients/cpp/src/: client_app_message_writer.h  giving_tree_client.cpp  giving_tree_client.h  main.cpp
clients/giving_tree_client_android_ndk/GivingTreeClientAndroidNdk/: AndroidManifest.xml
clients/giving_tree_client_cpp/: README.txt  funapi_client_protoc.sh  giving_tree_client_protoc.sh
clients/giving_tree_client_cpp/src/: app_messages_for_client.proto  client_app_message_writer.cc  giving_tree_client.cc  giving_tree_client.cpp  giving_tree_client.h
clients/giving_tree_client_python/: giving_tree_client-launcher  giving_tree_client.py
clients/python/: giving_tree_client-launcher
doxygen/: doxygen.conf.in  header.html
m4/: ax_funapi.m4  ax_protobuf.m4
src/: CMakeLists.txt  MANIFEST.json  activity_log.json  app_messages.proto  automake.mk  event_handlers.cc  event_handlers.h  funapi_event_handlers.cc  funapi_event_handlers.h  giving_tree.json  giving_tree_client_messages.proto  giving_tree_event_handlers.cc  giving_tree_event_handlers.h  giving_tree_event_handlers_sub_functions.cc  giving_tree_event_handlers_sub_functions.h  giving_tree_loggers.json  giving_tree_server.cc  giving_tree_server_messages.proto  giving_tree_types.h  object_models.json
tools/: cpplint.py
(+34 files in other folders)
